[package]
name = "reinlinsen"
author = "Tobias Brumhard"
version = "0.1.0"
edition = "2021"
description = "CLI to investigate OCI image contents."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bollard = "0.14.0"
clap = { version = "4.2.7", features = ["derive"] }
dirs = "5.0.1"
futures = "0.3.28"
serde = "1.0.160"
serde_json = "1.0.96"
tar = "0.4.38"
tempfile = "3.5.0"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
