[package]
name = "reinlinsen"
version = "0.3.5"
authors = ["Tobias Brumhard"]
edition = "2021"
description = "CLI to investigate OCI image contents."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
bollard = "0.17.1"
clap = { version = "4.5.16", features = ["derive"] }
dirs = "5.0.1"
fs_extra = "1.3.0"
futures = "0.3.30"
serde = "1.0.209"
serde_json = "1.0.127"
tar = "0.4.41"
tempfile = "3.12.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
